--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -5,7 +5,13 @@
     <Page id="page"
         title="{i18n>view1_title}">
         <content>
-
+            <List items="{/data}">
+                <items>
+                    <StandardListItem title="{full_name}"
+                        description="{city}"
+                        info="{conference}" />
+                </items>
+            </List>
         </content>
     </Page>
 </mvc:View>
